--- a/src/pages/user/dashboard/UserDashboard.module.css
+++ b/src/pages/user/dashboard/UserDashboard.module.css
@@ -1,7 +1,8 @@
 .dashboard {
-    max-width: 1200px;
+    /* max-width: 1200px; */
+    width: 100%;
     margin: 0 auto;
-    padding: 32px;
+    padding: 24px 48px;
   }
   
   /* Welcome Section */
