--- a/src/pages/user/lessons/lessonDetail/LessonDetail.module.css
+++ b/src/pages/user/lessons/lessonDetail/LessonDetail.module.css
@@ -36,6 +36,10 @@
 .content {
   margin-bottom: 3rem;
   text-align: left;
+  background: white;
+  padding: 2rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
 .section {
