--- a/src/pages/user/lessons/lessonList/LessonList.module.css
+++ b/src/pages/user/lessons/lessonList/LessonList.module.css
@@ -169,5 +169,5 @@
   box-shadow: 0 4px 24px rgba(0,0,0,0.08);
   padding: 2.5rem 2rem;
   margin: 32px auto 0 auto;
-  max-width: 900px;
+  max-width: 100%;
 }
