--- a/src/pages/user/profile/UserProfile.module.css
+++ b/src/pages/user/profile/UserProfile.module.css
@@ -1,7 +1,7 @@
 .profileContainer {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 2rem;
+    max-width: 100%;
+    margin: 0 ;
+    padding: 24px 48px;
   }
   
   .profileSection {
