--- a/src/components/heatmap/Heatmap.module.css
+++ b/src/components/heatmap/Heatmap.module.css
@@ -1,5 +1,5 @@
 :global(.react-calendar-heatmap .color-empty) {
-    fill: #eeeeee;
+  fill: #ebedf0;
 }
 
 :global(.react-calendar-heatmap .color-low) {
