--- a/src/pages/auth/AuthPage.module.css
+++ b/src/pages/auth/AuthPage.module.css
@@ -88,6 +88,16 @@
     box-shadow: 0 0 0 2px rgba(88, 204, 2, 0.2);
   }
   
+  .input-error {
+    border-color: #e53e3e;
+    box-shadow: 0 0 0 2px rgba(229, 62, 62, 0.2);
+  }
+  
+  .input-error:focus {
+    border-color: #e53e3e;
+    box-shadow: 0 0 0 2px rgba(229, 62, 62, 0.2);
+  }
+  
   .forgot-password {
     display: block;
     text-align: right;
