--- a/src/pages/admin/exercises/exerciseList/ExerciseList.module.css
+++ b/src/pages/admin/exercises/exerciseList/ExerciseList.module.css
@@ -239,3 +239,9 @@
   font-weight: bold;
   color: green;
 }
+
+.panelActions {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 16px;
+}
