--- a/src/pages/admin/lessons/lessonList/LessonList.module.css
+++ b/src/pages/admin/lessons/lessonList/LessonList.module.css
@@ -2,7 +2,7 @@
   padding: 24px;
   background-color: #f5f5f5;
   min-height: calc(100vh - 64px);
-  background: #fff;
+  /* background: #fff; */
   border-radius: 8px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.03);
 }
